Implemented buttons in HTML and added a style sheet

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,12 +10,23 @@
 <!-- Date:     xx/xx/23                                                                            -->
 <!--===============================================================================================-->
 
-<html>
+<html lang="en">
     <head>
-        <title>Hello World!</title>
+        <link rel = "stylesheet" href = "static/index.css"/>
+        <link rel="icon" type="image/x-icon" href="/images/favicon.ico"/>
+        <title>Login</title>
     </head>
     <body>
-        <p>Hello World! This is an example of a simple HTML page with one paragraph.</p>
+        <div class = "index__fieldset">
+            <button class = "index__button"
+                    id = "loginButton">
+                Login
+            </button>
+            <button class = "index__button"
+                    id = "registerButton">
+                Register
+            </button>
+        </div>
     </body>
 </html>
 
