--- a/static/index.css
+++ b/static/index.css
@@ -37,7 +37,7 @@ body {
 }
 
 /*************************************************************************************************/
-/* File: index.py                                                                                */
+/* File: index.css                                                                               */
 /*                                                                                               */
 /* Disclaimer: The following source code is the sole work of the author unless otherwise stated. */
 /*                                                                                               */
