--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 <html lang="en">
     <head>
         <link rel = "stylesheet" href = "static/index.css"/>
-        <link rel="icon" type="image/x-icon" href="/images/favicon.ico"/>
+        <link rel="icon" type="image/x-icon" href="static/favicon.ico"/>
         <title>Login</title>
     </head>
     <body>
