Restructure/redesign of files and website

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -10,25 +10,7 @@
 <!-- Date:     xx/xx/23                                                                            -->
 <!--===============================================================================================-->
 
-<html lang="en">
-    <head>
-        <link rel = "stylesheet" href = "static/index.css"/>
-        <link rel="icon" type="image/x-icon" href="static/favicon.ico"/>
-        <title>Login</title>
-    </head>
-    <body>
-        <div class = "index__fieldset">
-            <button class = "index__button"
-                    id = "loginButton">
-                Login
-            </button>
-            <button class = "index__button"
-                    id = "registerButton">
-                Register
-            </button>
-        </div>
-    </body>
-</html>
+{% extends "base.html" %}
 
 <!--===============================================================================================-->
 <!-- File: index.html                                                                              -->
