--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -2,7 +2,7 @@
 
 <!--===============================================================================================-->
 <!-- Program:  Python / SQLite Web Application                                                     -->
-<!-- Filename: index.html                                                                          -->
+<!-- Filename: login.html                                                                          -->
 <!-- Author:   Jamie Allen                                                                         -->
 <!-- Course:   BSc Digital Technology and Solutions                                                -->
 <!-- Module:   Software Engineering and Agile                                                      -->
@@ -12,12 +12,34 @@
 
 {% extends "base.html" %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Login{% endblock %}
 
-{% block content %}<h2>This is the home page!</h2>{% endblock %}
+{% block content %}
+<form method="POST">
+    <h3 align="center">Login</h3>
+    <div class="form-group">
+        <label for="email">Email Address</label>
+        <input type="email"
+               class="form-control"
+               id="email"
+               name="email"
+               placeholder="Enter email address"/>
+    </div>
+    <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password"
+               class="form-control"
+               id="password"
+               name="password"
+               placeholder="Enter password"/>
+    </div>
+    <br/>
+    <button type="submit" class="btn btn-primary">Login</button>
+</form>
+{% endblock %}
 
 <!--===============================================================================================-->
-<!-- File: index.html                                                                              -->
+<!-- File: login.html                                                                              -->
 <!--                                                                                               -->
 <!-- Disclaimer: The following source code is the sole work of the author unless otherwise stated. -->
 <!--                                                                                               -->
