--- a/web/templates/register.html
+++ b/web/templates/register.html
@@ -2,7 +2,7 @@
 
 <!--===============================================================================================-->
 <!-- Program:  Python / SQLite Web Application                                                     -->
-<!-- Filename: index.html                                                                          -->
+<!-- Filename: register.html                                                                       -->
 <!-- Author:   Jamie Allen                                                                         -->
 <!-- Course:   BSc Digital Technology and Solutions                                                -->
 <!-- Module:   Software Engineering and Agile                                                      -->
@@ -12,12 +12,49 @@
 
 {% extends "base.html" %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Register{% endblock %}
 
-{% block content %}<h2>This is the home page!</h2>{% endblock %}
+{% block content %}
+<form method="POST">
+    <h3 align="center">Register</h3>
+    <div class="form-group">
+        <label for="email">Email Address</label>
+        <input type="email"
+               class="form-control"
+               id="email"
+               name="email"
+               placeholder="Enter email address"/>
+    </div>
+    <div class="form-group">
+        <label for="first_name">First Name</label>
+        <input type="text"
+               class="form-control"
+               id="first_name"
+               name="first_name"
+               placeholder="Enter first name"/>
+    </div>
+    <div class="form-group">
+        <label for="password_first">Password</label>
+        <input type="password"
+               class="form-control"
+               id="password_first"
+               name="password_first"
+               placeholder="Enter password"/>
+    </div>
+    <div class="form-group">
+        <input type="password"
+               class="form-control"
+               id="password_second"
+               name="password_second"
+               placeholder="Confirm password"/>
+    </div>
+    <br/>
+    <button type="submit" class="btn btn-primary">Register</button>
+</form>
+{% endblock %}
 
 <!--===============================================================================================-->
-<!-- File: index.html                                                                              -->
+<!-- File: register.html                                                                           -->
 <!--                                                                                               -->
 <!-- Disclaimer: The following source code is the sole work of the author unless otherwise stated. -->
 <!--                                                                                               -->
