--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -14,7 +14,9 @@
 
 {% block title %}Home{% endblock %}
 
-{% block content %}<h2>This is the home page!</h2>{% endblock %}
+{% block content %}
+<h2>Home Page!</h2>
+{% endblock %}
 
 <!--===============================================================================================-->
 <!-- File: index.html                                                                              -->
