--- a/web/templates/register.html
+++ b/web/templates/register.html
@@ -15,42 +15,54 @@
 {% block title %}Register{% endblock %}
 
 {% block content %}
-<form method="POST">
-    <h3 align="center">Register</h3>
-    <div class="form-group">
-        <label for="email">Email Address</label>
-        <input type="email"
-               class="form-control"
-               id="email"
-               name="email"
-               placeholder="Enter email address"/>
+<div class="container-fluid">
+    <div class="row align-items-center g-lg-5 py-5">
+        <div class="col text-center text-lg-start">
+            <h1 class="display-4 fw-bold lh-1 mb-3">QA Web Application</h1>
+            <p class="fs-4">Submission for the Software Engineering and Agile module.</p>
+            <hr>
+            <p class="fs-4">Jamie Allen</p>
+        </div>
+        <div class="col">
+            <form class="p-4 p-md-5 border rounded-3 bg-light" method="POST">
+                <div class="form-floating mb-3">
+                    <input type="email" class="form-control" id="email" name="email" placeholder="name@example.com">
+                    <label for="floatingInput">Email address</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="text" class="form-control" id="first_name" name="first_name" placeholder="Name">
+                    <label for="floatingInput">First name</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="password" class="form-control" id="password_first" name="password_first" placeholder="Password">
+                    <label for="floatingPassword">Password</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="password" class="form-control" id="password_second" name="password_second" placeholder="Password">
+                    <label for="floatingPassword">Confirm password</label>
+                </div>
+                <div class="checkbox mb-3 text-center">
+                    <label>
+                        <input type="checkbox" value="remember_me" id="remember_me" name="remember_me"> Remember me
+                    </label>
+                </div>
+                <button class="w-100 btn btn-lg btn-primary" type="submit">Sign-up</button>
+                <hr class="my-4">
+                <small class="text-muted">By clicking Sign-up, you agree to the terms of use.</small>
+                <hr class="my-4">
+                <small class="text-muted">Already have an account?</small>
+                <button type="button" class="btn btn-link btn-sm float-end" onclick="login_redirect()">Click here to sign-in.</button>
+            </form>
+        </div>
     </div>
-    <div class="form-group">
-        <label for="first_name">First Name</label>
-        <input type="text"
-               class="form-control"
-               id="first_name"
-               name="first_name"
-               placeholder="Enter first name"/>
-    </div>
-    <div class="form-group">
-        <label for="password_first">Password</label>
-        <input type="password"
-               class="form-control"
-               id="password_first"
-               name="password_first"
-               placeholder="Enter password"/>
-    </div>
-    <div class="form-group">
-        <input type="password"
-               class="form-control"
-               id="password_second"
-               name="password_second"
-               placeholder="Confirm password"/>
-    </div>
-    <br/>
-    <button type="submit" class="btn btn-primary">Register</button>
-</form>
+</div>
+
+<script>
+    function login_redirect()
+    {
+        location.href = "/login"
+    }
+</script>
 {% endblock %}
 
 <!--===============================================================================================-->
