--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -39,7 +39,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link text-white" aria-current="page">
+                        <a href="/tickets" class="nav-link text-white" aria-current="page">
                             <!-- TODO - Add icon here -->
                             Tickets
                         </a>
