--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -21,11 +21,23 @@
     <div class="col-lg-6 mx-auto">
         <p class="lead mb-4">Get started managing support tickets below.</p>
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <button type="button" class="btn btn-primary btn-lg px-4 gap-3">View tickets</button>
-            <button type="button" class="btn btn-outline-secondary btn-lg px-4">Create ticket</button>
+            <button type="button" class="btn btn-primary btn-lg px-4 gap-3" onclick="register_tickets_redirect()">View tickets</button>
+            <button type="button" class="btn btn-outline-secondary btn-lg px-4" onclick="register_create_tickets_redirect()">Create ticket</button>
         </div>
     </div>
 </div>
+
+<script>
+    function register_tickets_redirect()
+    {
+        location.href = "/tickets"
+    }
+
+    function register_create_tickets_redirect()
+    {
+        location.href = "/tickets/create"
+    }
+</script>
 {% endblock %}
 
 <!--===============================================================================================-->
