--- a/web/templates/tickets.html
+++ b/web/templates/tickets.html
@@ -76,13 +76,13 @@
     <div class="list-group">
         {% for ticket in tickets %}
         <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
-            <img src={{ get_user_profile_image(ticket.user_id) }} alt="twbs" class="rounded-circle flex-shrink-0" width="32" height="32">
+            <img src={{ get_user_profile_image(ticket.assignee_id) }} alt="twbs" class="rounded-circle flex-shrink-0" width="32" height="32">
             <div class="d-flex gap-2 w-100 justify-content-between">
                 <div>
                     <h6 class="mb-0">{{ ticket.get_id() }}</h6>
                     <p class="mb-0 opacity-75">{{ ticket.issue_desc }}</p>
                 </div>
-                <small class="opacity-50 text-nowrap">{{ ticket.time_created }}</small>
+                <small class="opacity-50 text-nowrap">{{ convert_ticket_created_datetime(ticket.time_created) }}</small>
             </div>
         </a>
         {% endfor %}
