--- a/web/templates/tickets.html
+++ b/web/templates/tickets.html
@@ -7,7 +7,6 @@
 <!-- Course:   BSc Digital Technology and Solutions                                                -->
 <!-- Module:   Software Engineering and Agile                                                      -->
 <!-- Version:  1.0                                                                                 -->
-<!-- Date:     xx/xx/23                                                                            -->
 <!--===============================================================================================-->
 
 {% extends "base.html" %}
@@ -157,9 +156,28 @@
         <h1 class="display-5 fw-bold">{{ ticket.get_id() }}</h1>
         <div>
             {% if user.role_name == "Admin" %}
-            <button class="btn btn-danger m-2 float-end" onclick="window.location.href='/tickets/delete?ticket_id={{ ticket.id }}';">Delete Ticket</button>
+            <button type="button" class="btn btn-danger m-2 float-end" data-bs-toggle="modal" data-bs-target="#deletion_modal">Delete Ticket</button>
             {% endif %}
             <button class="btn btn-primary m-2 float-end" onclick="window.location.href='/tickets/edit?ticket_id={{ ticket.id }}';">Edit Ticket</button>
+        </div>
+    </div>
+
+    <!-- Deletion Modal -->
+    <div class="modal fade" id="deletion_modal" tabindex="-1" aria-labelledby="deletion_modal_label" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="deletion_modal_label">Are you sure?</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Are you sure you wish to delete {{ ticket.get_id() }}?</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-danger" onclick="window.location.href='/tickets/delete?ticket_id={{ ticket.id }}';">Delete</button>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -211,14 +229,14 @@
     </div>
 
     <!-- List of tickets -->
-    <div class="d-flex flex-column flex-md-row p-4 gap-4 py-md-5">
+    <div class="d-flex flex-column flex-row p-4 gap-4 py-md-5">
         <div class="list-group">
             {% for ticket in tickets %}
             <a href="/tickets/view?ticket_id={{ticket.id}}" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
                 <img src={{ get_user_profile_image(ticket.assignee_id) }} alt="twbs" class="rounded-circle flex-shrink-0" width="32" height="32">
                 <div class="d-flex gap-2 w-100 justify-content-between">
                     <div>
-                        <h6 class="mb-0">{{ ticket.get_id() }}</h6>
+                        <h5 class="mb-0">{{ ticket.get_id() }}</h5>
                         <p class="mb-0 opacity-75">{{ ticket.issue_desc }}</p>
                     </div>
                     <small class="opacity-50 text-nowrap">{{ convert_ticket_created_datetime(ticket.time_created) }}</small>
